@@ -1,6 +1,6 @@
 /* frags.h - Header file for the frag concept.
    Copyright 1987, 1992, 1993, 1994, 1995, 1997, 1998, 1999, 2000, 2001,
-   2002, 2003, 2004, 2005 Free Software Foundation, Inc.
+   2002, 2003, 2004, 2005, 2006 Free Software Foundation, Inc.
 
    This file is part of GAS, the GNU Assembler.
 
@@ -147,5 +147,7 @@ char *frag_var (relax_stateT type,
 		symbolS * symbol,
 		offsetT offset,
 		char *opcode);
+
+bfd_boolean frag_offset_fixed_p (fragS *, fragS *, bfd_vma *);
 
 #endif /* FRAGS_H */
